--- a/PROPPS/WebContent/WEB-INF/web.xml
+++ b/PROPPS/WebContent/WEB-INF/web.xml
@@ -12,5 +12,14 @@ version="3.0">
 	<servlet-mapping> 
 		<servlet-name>Test</servlet-name> 
 		<url-pattern>/toto</url-pattern>
-	</servlet-mapping> 
+	</servlet-mapping>
+	
+	 
+	
+	 <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
+    
+  
 </web-app>
