--- a/PROPPS/WebContent/WEB-INF/web.xml
+++ b/PROPPS/WebContent/WEB-INF/web.xml
@@ -47,6 +47,17 @@ version="3.0">
 		<url-pattern>/quickSearch</url-pattern><!-- pattern de la classe dans l'url-->
 	</servlet-mapping>
 <!-- Fin Servlet -->
+
+<!-- Debut Servlet -->
+	<servlet>
+		<servlet-name>PROPPSServlet</servlet-name> <!-- nom de la classe -->
+		<servlet-class>com.polytech.propps.servlets.PROPPSServlet</servlet-class><!-- arborescence de la classe : avec le package -->
+	</servlet>
+	<servlet-mapping> 
+		<servlet-name>PROPPSServlet</servlet-name> <!-- nom de la classe -->
+		<url-pattern>/init</url-pattern><!-- pattern de la classe dans l'url-->
+	</servlet-mapping>
+<!-- Fin Servlet -->
 	
 	 
 	
