--- a/PROPPS/WebContent/WEB-INF/web.xml
+++ b/PROPPS/WebContent/WEB-INF/web.xml
@@ -1,70 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app
-xmlns="http://java.sun.com/xml/ns/javaee" 
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
-version="3.0">
-	<servlet>
-		<servlet-name>Connexion</servlet-name> <!-- nom de la classe -->
-		<servlet-class>com.polytech.propps.servlets.Connexion</servlet-class><!-- arborescence de la classe : avec le package -->
-	</servlet>
-	<servlet-mapping> 
-		<servlet-name>Connexion</servlet-name> <!-- nom de la classe -->
-		<url-pattern>/connect</url-pattern><!-- pattern de la classe dans l'url-->
-	</servlet-mapping>
-<!-- Fin Servlet -->
-
-<!-- Debut Servlet -->
-	<servlet>
-		<servlet-name>InscriptionUtilisateur</servlet-name> <!-- nom de la classe -->
-		<servlet-class>com.polytech.propps.servlets.InscriptionUtilisateur</servlet-class><!-- arborescence de la classe : avec le package -->
-	</servlet>
-	<servlet-mapping> 
-		<servlet-name>InscriptionUtilisateur</servlet-name> <!-- nom de la classe -->
-		<url-pattern>/registUser</url-pattern><!-- pattern de la classe dans l'url-->
-	</servlet-mapping>
-<!-- Fin Servlet -->
-
-<!-- Debut Servlet -->
-	<servlet>
-		<servlet-name>InscriptionRecruteur</servlet-name> <!-- nom de la classe -->
-		<servlet-class>com.polytech.propps.servlets.InscriptionRecruteur</servlet-class><!-- arborescence de la classe : avec le package -->
-	</servlet>
-	<servlet-mapping> 
-		<servlet-name>InscriptionRecruteur</servlet-name> <!-- nom de la classe -->
-		<url-pattern>/registRecruiter</url-pattern><!-- pattern de la classe dans l'url-->
-	</servlet-mapping>
-<!-- Fin Servlet -->
-
-<!-- Debut Servlet -->
-	<servlet>
-		<servlet-name>RechercheRapide</servlet-name> <!-- nom de la classe -->
-		<servlet-class>com.polytech.propps.servlets.RechercheRapide</servlet-class><!-- arborescence de la classe : avec le package -->
-	</servlet>
-	<servlet-mapping> 
-		<servlet-name>RechercheRapide</servlet-name> <!-- nom de la classe -->
-		<url-pattern>/quickSearch</url-pattern><!-- pattern de la classe dans l'url-->
-	</servlet-mapping>
-<!-- Fin Servlet -->
-
-<!-- Debut Servlet -->
-	<servlet>
-		<servlet-name>PROPPSServlet</servlet-name> <!-- nom de la classe -->
-		<servlet-class>com.polytech.propps.servlets.PROPPSServlet</servlet-class><!-- arborescence de la classe : avec le package -->
-	</servlet>
-	<servlet-mapping> 
-		<servlet-name>PROPPSServlet</servlet-name> <!-- nom de la classe -->
-		<url-pattern>/init</url-pattern><!-- pattern de la classe dans l'url-->
-	</servlet-mapping>
-<!-- Fin Servlet -->
-	
-	 
-	
-	 <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-        <welcome-file>index.html</welcome-file>
-    </welcome-file-list>
-    
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+  <servlet>
+    <servlet-name>Connexion</servlet-name>
+    <servlet-class>com.polytech.propps.servlets.Connexion</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Connexion</servlet-name>
+    <url-pattern>/connect</url-pattern>
+  </servlet-mapping>
   
+  <servlet>
+    <servlet-name>InscriptionUtilisateur</servlet-name>
+    <servlet-class>com.polytech.propps.servlets.InscriptionUtilisateur</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>InscriptionUtilisateur</servlet-name>
+    <url-pattern>/registUser</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>InscriptionRecruteur</servlet-name>
+    <servlet-class>com.polytech.propps.servlets.InscriptionRecruteur</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>InscriptionRecruteur</servlet-name>
+    <url-pattern>/registRecruiter</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>RechercheRapide</servlet-name>
+    <servlet-class>com.polytech.propps.servlets.RechercheRapide</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>RechercheRapide</servlet-name>
+    <url-pattern>/quickSearch</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>PROPPSServlet</servlet-name>
+    <servlet-class>com.polytech.propps.servlets.PROPPSServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PROPPSServlet</servlet-name>
+    <url-pattern>/init</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>AddExperiencePro</servlet-name>
+    <servlet-class>com.polytech.propps.servlets.AddExperiencePro</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AddExperiencePro</servlet-name>
+    <url-pattern>/addExpPro</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>UserProfileServlet</servlet-name>
+    <servlet-class>com.polytech.propps.servlets.UserProfileServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UserProfileServlet</servlet-name>
+    <url-pattern>/seeUserProfile</url-pattern>
+  </servlet-mapping>
+  
+  <welcome-file-list>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
 </web-app>
