--- a/PROPPS/WebContent/WEB-INF/web.xml
+++ b/PROPPS/WebContent/WEB-INF/web.xml
@@ -90,6 +90,24 @@
     <url-pattern>/relationAnswer</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+    <servlet-name>ModifInfosPersoServlet</servlet-name>
+    <servlet-class>com.polytech.propps.servlets.ModifInfosPersoServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ModifInfosPersoServlet</servlet-name>
+    <url-pattern>/modifPersonalInfo</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>AppliquerModifsConnexion</servlet-name>
+    <servlet-class>com.polytech.propps.servlets.AppliquerModifsConnexion</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AppliquerModifsConnexion</servlet-name>
+    <url-pattern>/applyModifsConnect</url-pattern>
+  </servlet-mapping>
+  
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>index.html</welcome-file>
