--- a/PROPPS/WebContent/WEB-INF/web.xml
+++ b/PROPPS/WebContent/WEB-INF/web.xml
@@ -2,8 +2,8 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   
   <listener>
-		<listener-class>com.polytech.propps.servlets.PROPPSServlet</listener-class>
-	</listener>
+    <listener-class>com.polytech.propps.servlets.PROPPSServlet</listener-class>
+  </listener>
   
   <servlet>
     <servlet-name>Connexion</servlet-name>
@@ -13,6 +13,7 @@
     <servlet-name>Connexion</servlet-name>
     <url-pattern>/connect</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>InscriptionUtilisateur</servlet-name>
     <servlet-class>com.polytech.propps.servlets.InscriptionUtilisateur</servlet-class>
@@ -21,6 +22,7 @@
     <servlet-name>InscriptionUtilisateur</servlet-name>
     <url-pattern>/registUser</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>InscriptionRecruteur</servlet-name>
     <servlet-class>com.polytech.propps.servlets.InscriptionRecruteur</servlet-class>
@@ -29,6 +31,7 @@
     <servlet-name>InscriptionRecruteur</servlet-name>
     <url-pattern>/registRecruiter</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>RechercheRapide</servlet-name>
     <servlet-class>com.polytech.propps.servlets.RechercheRapide</servlet-class>
@@ -37,14 +40,7 @@
     <servlet-name>RechercheRapide</servlet-name>
     <url-pattern>/quickSearch</url-pattern>
   </servlet-mapping>
-<!--   <servlet> -->
-<!--     <servlet-name>PROPPSServlet</servlet-name> -->
-<!--     <servlet-class>com.polytech.propps.servlets.PROPPSServlet</servlet-class> -->
-<!--   </servlet> -->
-<!--   <servlet-mapping> -->
-<!--     <servlet-name>PROPPSServlet</servlet-name> -->
-<!--     <url-pattern>/init</url-pattern> -->
-<!--   </servlet-mapping> -->
+  
   <servlet>
     <servlet-name>AddExperiencePro</servlet-name>
     <servlet-class>com.polytech.propps.servlets.AddExperiencePro</servlet-class>
@@ -53,6 +49,7 @@
     <servlet-name>AddExperiencePro</servlet-name>
     <url-pattern>/addExpPro</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>UserProfileServlet</servlet-name>
     <servlet-class>com.polytech.propps.servlets.UserProfileServlet</servlet-class>
@@ -61,6 +58,7 @@
     <servlet-name>UserProfileServlet</servlet-name>
     <url-pattern>/seeUserProfile</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>CurrentUserProfileServlet</servlet-name>
     <servlet-class>com.polytech.propps.servlets.CurrentUserProfileServlet</servlet-class>
@@ -69,6 +67,7 @@
     <servlet-name>CurrentUserProfileServlet</servlet-name>
     <url-pattern>/seeCurrentUserProfile</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>DemandeRelation</servlet-name>
     <servlet-class>com.polytech.propps.servlets.DemandeRelation</servlet-class>
@@ -77,6 +76,7 @@
     <servlet-name>DemandeRelation</servlet-name>
     <url-pattern>/relationAsk</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>ReponseDemande</servlet-name>
     <servlet-class>com.polytech.propps.servlets.ReponseDemande</servlet-class>
@@ -85,6 +85,7 @@
     <servlet-name>ReponseDemande</servlet-name>
     <url-pattern>/relationAnswer</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>ModifInfosPersoServlet</servlet-name>
     <servlet-class>com.polytech.propps.servlets.ModifInfosPersoServlet</servlet-class>
@@ -93,6 +94,7 @@
     <servlet-name>ModifInfosPersoServlet</servlet-name>
     <url-pattern>/modifPersonalInfo</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>AppliquerModifsConnexion</servlet-name>
     <servlet-class>com.polytech.propps.servlets.AppliquerModifsConnexion</servlet-class>
@@ -101,6 +103,7 @@
     <servlet-name>AppliquerModifsConnexion</servlet-name>
     <url-pattern>/applyModifsConnect</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>AppliquerModifPerso</servlet-name>
     <servlet-class>com.polytech.propps.servlets.AppliquerModifPerso</servlet-class>
@@ -109,6 +112,7 @@
     <servlet-name>AppliquerModifPerso</servlet-name>
     <url-pattern>/applyModifsPerso</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>AutoCompletionServlet</servlet-name>
     <servlet-class>com.polytech.propps.servlets.AutoCompletionServlet</servlet-class>
@@ -116,6 +120,15 @@
   <servlet-mapping>
     <servlet-name>AutoCompletionServlet</servlet-name>
     <url-pattern>/autoCompletion</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>ModifExperiencePro</servlet-name>
+    <servlet-class>com.polytech.propps.servlets.ModifExperiencePro</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ModifExperiencePro</servlet-name>
+    <url-pattern>/modifProExp</url-pattern>
   </servlet-mapping>
   
   <welcome-file-list>
