--- a/PROPPS/WebContent/WEB-INF/web.xml
+++ b/PROPPS/WebContent/WEB-INF/web.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
-  
   <listener>
     <listener-class>com.polytech.propps.servlets.PROPPSServlet</listener-class>
   </listener>
-  
   <servlet>
     <servlet-name>Connexion</servlet-name>
     <servlet-class>com.polytech.propps.servlets.Connexion</servlet-class>
@@ -13,7 +11,6 @@
     <servlet-name>Connexion</servlet-name>
     <url-pattern>/connect</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>InscriptionUtilisateur</servlet-name>
     <servlet-class>com.polytech.propps.servlets.InscriptionUtilisateur</servlet-class>
@@ -22,7 +19,6 @@
     <servlet-name>InscriptionUtilisateur</servlet-name>
     <url-pattern>/registUser</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>InscriptionRecruteur</servlet-name>
     <servlet-class>com.polytech.propps.servlets.InscriptionRecruteur</servlet-class>
@@ -31,7 +27,6 @@
     <servlet-name>InscriptionRecruteur</servlet-name>
     <url-pattern>/registRecruiter</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>RechercheRapide</servlet-name>
     <servlet-class>com.polytech.propps.servlets.RechercheRapide</servlet-class>
@@ -40,7 +35,6 @@
     <servlet-name>RechercheRapide</servlet-name>
     <url-pattern>/quickSearch</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>AddExperiencePro</servlet-name>
     <servlet-class>com.polytech.propps.servlets.AddExperiencePro</servlet-class>
@@ -49,7 +43,6 @@
     <servlet-name>AddExperiencePro</servlet-name>
     <url-pattern>/addExpPro</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>UserProfileServlet</servlet-name>
     <servlet-class>com.polytech.propps.servlets.UserProfileServlet</servlet-class>
@@ -58,7 +51,6 @@
     <servlet-name>UserProfileServlet</servlet-name>
     <url-pattern>/seeUserProfile</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>CurrentUserProfileServlet</servlet-name>
     <servlet-class>com.polytech.propps.servlets.CurrentUserProfileServlet</servlet-class>
@@ -67,7 +59,6 @@
     <servlet-name>CurrentUserProfileServlet</servlet-name>
     <url-pattern>/seeCurrentUserProfile</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>DemandeRelation</servlet-name>
     <servlet-class>com.polytech.propps.servlets.DemandeRelation</servlet-class>
@@ -76,7 +67,6 @@
     <servlet-name>DemandeRelation</servlet-name>
     <url-pattern>/relationAsk</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>ReponseDemande</servlet-name>
     <servlet-class>com.polytech.propps.servlets.ReponseDemande</servlet-class>
@@ -85,7 +75,6 @@
     <servlet-name>ReponseDemande</servlet-name>
     <url-pattern>/relationAnswer</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>ModifInfosPersoServlet</servlet-name>
     <servlet-class>com.polytech.propps.servlets.ModifInfosPersoServlet</servlet-class>
@@ -94,7 +83,6 @@
     <servlet-name>ModifInfosPersoServlet</servlet-name>
     <url-pattern>/modifPersonalInfo</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>AppliquerModifsConnexion</servlet-name>
     <servlet-class>com.polytech.propps.servlets.AppliquerModifsConnexion</servlet-class>
@@ -103,7 +91,6 @@
     <servlet-name>AppliquerModifsConnexion</servlet-name>
     <url-pattern>/applyModifsConnect</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>AppliquerModifPerso</servlet-name>
     <servlet-class>com.polytech.propps.servlets.AppliquerModifPerso</servlet-class>
@@ -112,7 +99,6 @@
     <servlet-name>AppliquerModifPerso</servlet-name>
     <url-pattern>/applyModifsPerso</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>AutoCompletionServlet</servlet-name>
     <servlet-class>com.polytech.propps.servlets.AutoCompletionServlet</servlet-class>
@@ -121,7 +107,6 @@
     <servlet-name>AutoCompletionServlet</servlet-name>
     <url-pattern>/autoCompletion</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>Recrutement</servlet-name>
     <servlet-class>com.polytech.propps.servlets.Recrutement</servlet-class>
@@ -130,7 +115,6 @@
     <servlet-name>Recrutement</servlet-name>
     <url-pattern>/recrut</url-pattern>
   </servlet-mapping>
-  
   <servlet>
     <servlet-name>RecruteurCourant</servlet-name>
     <servlet-class>com.polytech.propps.servlets.RecruteurCourant</servlet-class>
@@ -139,7 +123,22 @@
     <servlet-name>RecruteurCourant</servlet-name>
     <url-pattern>/currentRecruiter</url-pattern>
   </servlet-mapping>
-  
+  <servlet>
+    <servlet-name>recupEmail</servlet-name>
+    <servlet-class>com.polytech.propps.servlets.recupEmail</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>recupEmail</servlet-name>
+    <url-pattern>/getMail</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>RecupMessages</servlet-name>
+    <servlet-class>com.polytech.propps.servlets.RecupMessages</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>RecupMessages</servlet-name>
+    <url-pattern>/getMessages</url-pattern>
+  </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>index.html</welcome-file>
